package com.pis.buy2gether.model.domain.pojo.Grup;

public enum Category {
    ELECTRONICA,
    HOGAR,
    JUGUETES,
    MODA,
    MUEBLES,
    OTROS,
    ROPA,
    SALUD,
    TECNOLOGIA,
    VESTIDO,
    ZAPATOS
}
